--- a/environment.yml
+++ b/environment.yml
@@ -19,18 +19,65 @@ dependencies:
   - setuptools=75.1.0=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
   - tk=8.6.14=h39e8969_0
-  - tzdata=2024b=h04d1e81_0
   - wheel=0.44.0=py310h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
   - pip:
+      - aiofiles==23.2.1
+      - annotated-types==0.7.0
+      - anyio==4.7.0
       - certifi==2024.8.30
       - charset-normalizer==3.4.0
+      - click==8.1.7
+      - exceptiongroup==1.2.2
+      - fastapi==0.115.6
+      - ffmpy==0.4.0
+      - filelock==3.16.1
+      - fsspec==2024.10.0
+      - gradio==5.8.0
+      - gradio-client==1.5.1
+      - h11==0.14.0
+      - httpcore==1.0.7
+      - httpx==0.28.1
+      - huggingface-hub==0.26.5
       - idna==3.10
+      - jinja2==3.1.4
       - kafka-python==2.0.2
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - mdurl==0.1.2
+      - numpy==2.2.0
+      - orjson==3.10.12
+      - packaging==24.2
+      - pandas==2.2.3
+      - pillow==11.0.0
       - pip==24.3.1
       - py4j==0.10.9.7
+      - pydantic==2.10.3
+      - pydantic-core==2.27.1
+      - pydub==0.25.1
+      - pygments==2.18.0
       - pyspark==3.5.3
+      - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
+      - python-multipart==0.0.19
+      - pytz==2024.2
+      - pyyaml==6.0.2
       - requests==2.32.3
+      - rich==13.9.4
+      - ruff==0.8.3
+      - safehttpx==0.1.6
+      - semantic-version==2.10.0
+      - shellingham==1.5.4
+      - six==1.17.0
+      - sniffio==1.3.1
+      - starlette==0.41.3
+      - thread==2.0.5
+      - tomlkit==0.13.2
+      - tqdm==4.67.1
+      - typer==0.15.1
+      - typing-extensions==4.12.2
+      - tzdata==2024.2
       - urllib3==2.2.3
+      - uvicorn==0.32.1
+      - websockets==14.1
